[metadata]
name = mortice
version = 0.0.1
author = ItIsEntropy
author_email = Digitalisierung_PPK@daimler.com
description = parse2model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itisentropy/mortice
project_urls =
    Bug Tracker = https://github.com/itisentropy/mortice/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Mozzila Public License V2.0
    Operating System :: OS Independent (NT and POSIX based OSes)
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mortice.scripts:main
viento.file_lockers =
    mortice = mortice.mortice:Mortice
